# ScisTreeCNA

./: .gitignore  README.md  pyproject.toml  test_data_reads.csv  test_data_tg.txt  test_data_tree.pkl
examples/: test.vcf  test_data_reads.csv  test_data_tg.txt  test_data_tree.pkl
scistreecna/: __init__.py  cli.py  cn_estimate.py  scistreecna.py  topological_sort.py  transition_solver.py
scistreecna.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scistreecna/base/: node.py  tree.py
scistreecna/simulate/: __init__.py  simulate.py  util_sim.py
scistreecna/util/: __init__.py  kernels.py  metric.py  reader.py  util_common.py  util_tree.py
tutorials/: scistreecna_basic.ipynb
